[gd_scene load_steps=4 format=3 uid="uid://dx2cewk0vney2"]

[ext_resource type="Script" uid="uid://c64n54nml7ppv" path="res://Scripts/movebottommeat.gd" id="1_sv5m0"]
[ext_resource type="Texture2D" uid="uid://b8x1fj66lnyl4" path="res://Assets/bottommeat.png" id="2_sv5m0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lmkpo"]
size = Vector2(218, 90)

[node name="Area2D" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_sv5m0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-129, -130)
shape = SubResource("RectangleShape2D_lmkpo")

[node name="Button" type="Button" parent="."]
offset_left = -243.0
offset_top = -173.0
offset_right = -17.0
offset_bottom = -77.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-133, -124.5)
scale = Vector2(0.340426, 0.341912)
texture = ExtResource("2_sv5m0")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
